Update for 2026 with 16 teams

--- a/football_tournament/templates/tournament/base.html
+++ b/football_tournament/templates/tournament/base.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}CopaMundial 2024{% endblock title %}</title>
+    <title>{% block title %}CopaMundial 2025{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'styles/base.css' %}">
     {% block extra_css %}{% endblock %}
 </head>
@@ -35,7 +35,7 @@
         </div>
         <div class="sponsor">
             GLI AMICI DELLA COPAMUNDIAL
-            <a href="https://www.instagram.com/selos_design/" target="_blank"><img src="{% static 'images/selos.png' %}" alt="Selos"></a>
+            <a href="https://www.selosdesign.com/" target="_blank"><img src="{% static 'images/selos.png' %}" alt="Selos"></a>
             <img src="{% static 'images/il_legno_per_voi.png' %}" alt="LegnoPerVoi"></a>
             <a href="https://www.instagram.com/dementosofficial/" target="_blank"><img src="{% static 'images/dementos.png' %}" alt="Dementos"></a>
         </div>
