--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block content %}
-<div class="title">Benvenuti alla CopaMundial 2024</div>
+<div class="title">Benvenuti alla CopaMundial 2025</div>
 <div class="text">Qui potete rimanere aggiornati sulle prossime sfide, risultati e marcatori.</div>
-<div class="text"><b>Quando</b>: Dal 4 Giugno al 5 Luglio </div>
+<div class="text"><b>Quando</b>: 3 Giugno - 11 Luglio </div>
 <div class="text"><b>Dove</b>:
     <a
         href="https://www.google.com/maps/place/Sport+Live,+Via+Giuseppe+Verdi,+20010+Santo+Stefano+Ticino+MI,+Italia/@45.4806187,8.9111423,17z/data=!3m1!4b1!4m6!3m5!1s0x4786edfe0a9ab43f:0x761b621acb79cb5a!8m2!3d45.4806097!4d8.9160114!16s%2Fg%2F11c0vbv2w_?entry=ttu">Sport
@@ -20,20 +20,20 @@
 <div class="text"><b>Cosa ci sarà:</b>
 <ul class="text" style="list-style-type: none; margin-left: 5px;">
     <li class="text" style="margin-bottom: 20px;">
-        12 squadre
+        16 squadre
     </li>
     <li class="text" style="margin-bottom: 20px;">
-        26 partite
+        32 partite
     </li>
     <li class="text" style="margin-bottom: 20px;">
-        Sorteggio Live Lunedì 20 Maggio con diretta Instagram dalle ore 21:00
+        Sorteggio Live con diretta Instagram
     </li>
     <li class="text" style="margin-bottom: 20px;">
-        Serata di apertura il 4 Giugno con Concerto Live dei <a
+        Serata di apertura il 3 Giugno con Concerto Live dei <a
             href="https://www.instagram.com/p/C6jYZCNNuO6/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo
     </li>
     <li class="text" style="margin-bottom: 20px;">
-        Serata di chiusura il 5 Luglio con le Finalissime 1° - 2° posto e 3° - 4° posto, premiazioni, paninaro, dj set con
+        Serata di chiusura 11 Luglio con le Finalissime 1° - 2° posto e 3° - 4° posto, premiazioni, paninaro, dj set con
         vocalist
     </li>
 </ul>
