--- a/football_tournament/tournament/static/styles/team_and_player_list.css
+++ b/football_tournament/tournament/static/styles/team_and_player_list.css
@@ -2,7 +2,7 @@
     display: grid;
     gap: 10px; /* Space between grid items */
     padding: 5px; /* Padding around the entire grid container */
-    grid-template-columns: repeat(6, 1fr); /* Creates six columns */
+    grid-template-columns: repeat(8, 1fr); /* Creates six columns */
     grid-template-rows: repeat(2, 1fr); /* Creates two rows */
 }
 
@@ -16,12 +16,16 @@
 }
 
 .team-card h3 {
-    margin-top: 5px;
-    text-align: center; /* Aligns team name to the left */
-    margin-bottom: 10px; /* Space between the team name and the player list */
+    height: 50px;
+    padding: 0 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     background-color: #8CAF71;
-    padding: 5px 5px;
-    color: #333333
+    color: #333333;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .team-card ul {
