--- a/football_tournament/templates/tournament/group_draw.html
+++ b/football_tournament/templates/tournament/group_draw.html
@@ -25,6 +25,28 @@
     {% endif %}
 </form>
 
+<style>
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat({{ groups|length|add:"1" }}, 1fr);
+        gap: 30px;
+        justify-content: center;
+        padding: 20px;
+        text-align: center;
+    }
+    .column {
+        display: flex;
+        flex-direction: column;
+        font-size: 26px;
+        align-items: center;  
+    }
+    .team, .group {
+        margin: 5px 0;
+        font-size: 20px;
+        text-align: center;
+    }
+</style>
+
 <div class="grid-container">
     <div class="column">
         <h3>Squadre</h3>
