--- a/football_tournament/templates/tournament/home.html
+++ b/football_tournament/templates/tournament/home.html
@@ -29,8 +29,7 @@
         Sorteggio Live con diretta Instagram
     </li>
     <li class="text" style="margin-bottom: 20px;">
-        Serata di apertura il 3 Giugno con Concerto Live dei <a
-            href="https://www.instagram.com/p/C6jYZCNNuO6/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo
+        Serata di apertura il 3 Giugno <!--con Concerto Live dei <ahref="https://www.instagram.com/p/C6jYZCNNuO6/">Dementos</a> (Cover Band dei GemBoy) + Aperitivo -->
     </li>
     <li class="text" style="margin-bottom: 20px;">
         Serata di chiusura 11 Luglio con le Finalissime 1° - 2° posto e 3° - 4° posto, premiazioni, paninaro, dj set con
