--- a/football_tournament/templates/tournament/ranking.html
+++ b/football_tournament/templates/tournament/ranking.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'styles/ranking.css' %}">
+<link rel="stylesheet" href="{% static 'styles/ranking.css' %}?v=9">
 {% endblock %}
 
 {% block content %}
@@ -21,10 +21,10 @@
             <tr>
                 <th class="team-name">Squadra</th>
                 <th>Punti</th>
-                <th>Goal Fatti</th>
-                <th>Goal Subiti</th>
-                <th>Differenza Reti</th>
-            </tr>
+                <th><span class="title-desktop">Goal Fatti</span><span class="title-mobile">GF</span></th>
+                <th><span class="title-desktop">Goal Subiti</span><span class="title-mobile">GS</span></th>
+                <th><span class="title-desktop">Differenza Reti</span><span class="title-mobile">DR</span></th>
+                            </tr>
             {% for team in teams %}
             <tr class="{% if team.team_name in context.qualified_team_names %}highlight{% endif %}">
                 <td class="team-name">{{ team.team_name }}</td>
