--- a/football_tournament/tournament/static/styles/team_and_player_list.css
+++ b/football_tournament/tournament/static/styles/team_and_player_list.css
@@ -2,8 +2,8 @@
     display: grid;
     gap: 10px; /* Space between grid items */
     padding: 5px; /* Padding around the entire grid container */
-    grid-template-columns: repeat(8, 1fr); /* Creates six columns */
-    grid-template-rows: repeat(2, 1fr); /* Creates two rows */
+    grid-template-columns: repeat(4, 1fr); /* Creates six columns */
+    grid-template-rows: repeat(4, 1fr);
 }
 
 .team-card {
@@ -13,9 +13,12 @@
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     display: flex;
     flex-direction: column; /* Ensures content flows vertically */
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .team-card h3 {
+    word-break: break-word; /* Evita overflow */
     height: 50px;
     padding: 0 5px;
     display: flex;
@@ -26,6 +29,7 @@
     color: #333333;
     margin-top: 5px;
     margin-bottom: 10px;
+    white-space: normal
 }
 
 .team-card ul {
@@ -40,4 +44,16 @@
 
 .team-card li:last-child {
     border-bottom: none; /* Removes the border from the last item for cleanliness */
+}
+
+@media (max-width: 768px) {
+    .teams-container {
+        grid-template-columns: repeat(2, 1fr); /* Una sola colonna su mobile */
+    }
+}
+
+@media (max-width: 1024px) and (min-width: 769px) {
+    .teams-container {
+        grid-template-columns: repeat(2, 1fr); /* Due colonne su tablet */
+    }
 }
